# SystemsProgramming

./: .gitignore  CString.webloc  SocketType.c  SocketType.h
01StringAndList/: List.h  String.c  String.h  (+4 more)
assignment/: CMakeLists.txt  Documentation.pages  Makefile  SocketType.c  lib.c  lib.h  readme.md
assignment/assignemnt.xcodeproj/: project.pbxproj
assignment/assignemnt.xcodeproj/project.xcworkspace/xcuserdata/seb.xcuserdatad/: UserInterfaceState.xcuserstate
assignment/assignemnt.xcodeproj/xcuserdata/seb.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
assignment/assignemnt.xcodeproj/xcuserdata/seb.xcuserdatad/xcschemes/: client.xcscheme  server.xcscheme  xcschememanagement.plist
assignment/assignemnt1.xcodeproj/: project.pbxproj
assignment/assignemnt1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
assignment/assignemnt1.xcodeproj/project.xcworkspace/xcuserdata/seb.xcuserdatad/: UserInterfaceState.xcuserstate
assignment/assignemnt1/client/: main.c
assignment/assignemnt1/server/: main.c
assignment/client/: client  main.c  test  test.c
assignment/server/: List.c  Makefile  cat.c  common.h  console.c  cp.c  ls.c  main.c  misc.c  server  sleep.c  test  test.c  uname.c
assignment2/: CMakeLists.txt  CondVar.c  CondVar.h  ConditionVariable.c  ConditionVariable.h  Doxyfile  Job.c  Job.h  JobQueue.c  JobQueue.h  Makefile  Makefile.am  Makefile.in  Memory.h  Mutex.c  Mutex.h  Queue.c  Queue.h  Request.c  Request.h  SThread.h  Semaphore.c  Semaphore.h  SharedMemory.c  SharedMemory.h  Thread.c  Thread.h  configure  configure.ac  doc.cfg  flawfinder.html  lib.c  lib.h  main.c  main2.c  readme.md  shmtest.c  shmtest2.c  test3.c
assignment2/client/: main.c
assignment2/doxygen-theme/: README.md
(+82 files in other folders)
